# nova-lang

./: .gitignore  Cargo.toml  README.md  program
src/: codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  typecheck.rs  types.rs
tests/: main.rs
