[package]
name = "nova-lang"
version = "0.1.0"
edition = "2025"
authors = ["Aditya Sengupta"]
description = "A simple statically-typed programming language implementation using LLVM"
license = "MIT"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }
logos = "0.12"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4"
